Some changes to make it prettier

--- a/TPC4/tabperiodica/templates/element.html
+++ b/TPC4/tabperiodica/templates/element.html
@@ -29,7 +29,7 @@
                 </tr>
                 <tr>
                     <td>{{ data.na.value }}</td>
-                    <td>{{ data.nome.value }}</td>
+                    <td>{{ data.nome.value.capitalize() }}</td>
                     <td>{{ data.simb.value }}</td>
                     <td>{{ data.pa.value }}</td>
                     <td>{{ data.class.value.split('#')[-1] }}</td>
